--- a/index.html
+++ b/index.html
@@ -4,23 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/style.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+ 
   <title>Crystal Collector Game</title>
 </head>
 <body>
-    <h1>Crystals Collector!</h1>
+    <div class = "row">
+          <div class="col-5"><h1>Crystals Collector!</h1>
+          </div>
+    </div>
+
         <div class="instructions">
             <p>You will be given a random number at the start of the game.</p>
             <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
             <p>You win the game by matching your total score to the random number generated, and you lose the game if your total score goes above the randomly generated number.</p>
             <p>The value of each crystal is hidden from you until you click on it.</p>
             <p>Each time when the game starts, the game will change the values of each crystal.</p>
+
         </div>
-        <div class="targetnumber"></div>
-        <div class="score"></div>
-        <div class="game"></div>
+        <div class="container">
+            <div class="row">
+  
+                  <div class="col-md-3 my-3">
+                    <a href="index.html" id="logo">Bruce Wilson</a>
+                  </div>
+                  <div class="col-5"></div>
+  
+                  <div class="col-lg-4">
+                    <ul class="nav justify-content-end">
+                      <li class="nav-item">
+                        <a class="nav-link active" href="index.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
+              </div>
+      </div>
+          <div class="row">
+              <div class="col-4 targetnumber"></div>
+              <div class="col-2 score"></div>
+          </div>
+
+          <div class="game"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/javascript/game.js"></script>
