finally got the buttons to output to total score, but they are being input as strings so i will need to parsint them i think

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <p>The value of each crystal is hidden from you until you click on it.</p>
                   <p>Each time when the game starts, the game will change the values of each crystal.</p>
                   
-                  <div class="row">
+                  <div class="row edge">
                     <div class="col-4 targetnumber">
 
                     </div>
@@ -59,7 +59,11 @@
                       </div>
                   </div>
 
+                  <div class="totalscore">Your total score is:</div>
 
+                  <div class="totalnumber">
+
+                  </div>
         </div>
        
       </div>
